# json

./: .gitignore  .travis.yml  HISTORY  LICENSE  Makefile.am  Makefile.in  PackageInfo.g  README  autogen.sh  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap0_mj.html-e  chap1.html  chap1.txt  chap1_mj.html  chap1_mj.html-e  chapInd.html  chapInd.txt  chapInd_mj.html  chapInd_mj.html-e
gap/: json.gd  json.gi
src/: gap-functions.h  json.cc
src/picojson/: gap-traits.h  picojson.h
src/picojson/examples/: gmp-traits.h  iostream-gmp.cc
tst/: UTF-8-test.txt.clean  test_hard.tst  test_loop.tst  test_parse.tst  test_record.tst  test_stream.tst  testall.g
